# todo-menubar

./: README.md  index.html  package-lock.json  package.json
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: command.rs  lib.rs  ocr.rs  tray.rs
src/components/: AddTodo.tsx  Archive.tsx  FilterBar.tsx  ProjectBar.tsx  ScreenshotUpload.tsx  SearchBar.tsx  Settings.tsx  TodoItem.tsx  TodoList.tsx
src/hooks/: useProjects.ts  useTodos.ts
src/lib/: date.ts  db.ts  ocr.ts  types.ts
