[package]
name = "todo-menubar"
version = "0.2.0"
description = "A macOS menu bar to-do list app"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde_json = "1"
serde = { version = "1", features = ["derive"] }
log = "0.4"
tauri = { version = "2", features = [
  "macos-private-api",
  "tray-icon",
  "image-png",
] }
tauri-plugin-log = "2"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
tauri-plugin-dialog = "2"
tauri-plugin-notification = "2"

# Menu bar panel behavior (v2.1 branch)
tauri-nspanel = { git = "https://github.com/ahkohd/tauri-nspanel", branch = "v2.1" }

# OCR: Claude API
reqwest = { version = "0.12", features = ["json"] }
base64 = "0.22"

# Phase 5
tauri-plugin-global-shortcut = "2"

[features]
custom-protocol = ["tauri/custom-protocol"]
